# Gnns_reader

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagedata.h  qcustomplot.h  read.cpp  read.h  resorces.qrc  satellite_window.cpp  satellite_window.h  satellite_window.ui
resources/: 2021.05 logbook_demo.txt
